--- a/Assignment 4/Assignment 04 - Kernel Methods.ipynb
+++ b/Assignment 4/Assignment 04 - Kernel Methods.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**GitHub Link:** "
+    "**GitHub Link:** https://github.com/randika-perera/EN3150-Pattern-Recognition/blob/main/Assignment%204/Assignment%2004%20-%20Kernel%20Methods.ipynb"
    ]
   },
   {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -772,13 +772,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***End of Assignment 04: Kernel Methods***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**Index No : 200462U**"
    ]
   },
@@ -793,7 +786,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**GitHub Link:** "
+    "**GitHub Link:** https://github.com/randika-perera/EN3150-Pattern-Recognition/blob/main/Assignment%204/Assignment%2004%20-%20Kernel%20Methods.ipynb "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***End of Assignment 04: Kernel Methods***"
    ]
   }
  ],
